# deadbeef-nptxt-plugin

./: Makefile.am  README.md  configure.ac
src/: nptxt.c
